# reachy-video-chat

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  index.html  pyproject.toml  style.css
.claude/agents/: reviewer.md
config/: default.yaml
deploy/: install.sh
profiles/default/: instructions.txt
src/reachy_mini_companion/: __init__.py  config.py  main.py  state_machine.py
src/reachy_mini_companion/conversation/: gemini_session.py  system_prompt.py
src/reachy_mini_companion/cost/: db.py  reporter.py  tracker.py
src/reachy_mini_companion/data/: default.yaml
src/reachy_mini_companion/data/profiles/kids/: instructions.txt  tools.txt
src/reachy_mini_companion/robot/: audio.py  controller.py  expressions.py  sounds.py
src/reachy_mini_companion/tools/: core_tools.py  tool_dispatcher.py
src/reachy_mini_companion/wake/: __init__.py  base.py  edge_impulse.py  vad.py  wake_word.py
src/reachy_mini_companion/web/: audio_handler.py  dashboard.py  setup_wizard.py
tests/: test_config.py  test_cost_tracker.py  test_dashboard.py  test_gemini_session.py  test_integration.py  test_setup_wizard.py  test_state_machine.py  test_tools.py  test_wake.py
